Add requirements for build files.

--- a/src/test/python/wfa/measurement/reporting/postprocessing/noiseninja/BUILD.bazel
+++ b/src/test/python/wfa/measurement/reporting/postprocessing/noiseninja/BUILD.bazel
@@ -7,5 +7,6 @@ py_test(
     deps = [
         "//src/main/proto/wfa/measurement/reporting/postprocessing/v2alpha:report_post_processor_result_py_pb2",
         "//src/main/python/wfa/measurement/reporting/postprocessing/noiseninja",
+        requirement("protobuf"),
     ],
 )
