--- a/src/test/python/wfa/measurement/reporting/postprocessing/report/BUILD.bazel
+++ b/src/test/python/wfa/measurement/reporting/postprocessing/report/BUILD.bazel
@@ -5,5 +5,6 @@ py_test(
     srcs = ["test_report.py"],
     deps = [
         "//src/main/python/wfa/measurement/reporting/postprocessing/report",
+        requirement("protobuf"),
     ],
 )
