--- a/src/main/kotlin/org/wfanet/measurement/securecomputation/deploy/gcloud/datawatcher/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/measurement/securecomputation/deploy/gcloud/datawatcher/BUILD.bazel
@@ -8,7 +8,12 @@ package(default_visibility = [
 
 kt_jvm_library(
     name = "data_watcher_function",
+    testonly = True,
     srcs = ["DataWatcherFunction.kt"],
+    resources = [
+        "//src/main/k8s/testing/secretfiles:data_watcher_certs",
+        "//src/main/kotlin/org/wfanet/measurement/securecomputation/deploy/gcloud/datawatcher/testing:config",
+    ],
     deps = [
         "//imports/java/com/google/cloud/functions/invoker:java_function_invoker",
         "//src/main/kotlin/org/wfanet/measurement/common:class_loader_resources",
@@ -26,6 +31,7 @@ kt_jvm_library(
 
 java_binary(
     name = "DataWatcherFunction",
+    testonly = True,
     main_class = "org.wfanet.measurement.securecomputation.deploy.gcloud.datawatcher.DataWatcherFunction",
     runtime_deps = [":data_watcher_function"],
 )
