--- a/src/main/kotlin/org/wfanet/measurement/securecomputation/deploy/gcloud/datawatcher/testing/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/measurement/securecomputation/deploy/gcloud/datawatcher/testing/BUILD.bazel
@@ -2,7 +2,10 @@ load("@rules_java//java:defs.bzl", "java_binary")
 
 package(
     default_testonly = True,
-    default_visibility = ["//src/test/kotlin/org/wfanet/measurement/securecomputation/deploy/gcloud/datawatcher:__subpackages__"],
+    default_visibility = [
+        "//src/main/kotlin/org/wfanet/measurement/securecomputation/deploy/gcloud/datawatcher:__subpackages__",
+        "//src/test/kotlin/org/wfanet/measurement/securecomputation/deploy/gcloud/datawatcher:__subpackages__",
+    ],
 )
 
 filegroup(
