ci: Add CodeCov integration

--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -108,11 +108,19 @@ jobs:
       - name: Export bazel output path
         run: echo "BAZEL_OUTPUT_PATH=$(bazel info output_path)" >> $GITHUB_ENV
 
-      - name: Upload coverage report
+      - name: Upload coverage report as artifact
         uses: actions/upload-artifact@v4
         with:
           name: coverage-report
           path: ${{ env.BAZEL_OUTPUT_PATH }}/_coverage/_coverage_report.dat
+      
+      - name: Upload coverage report to Codecov
+        uses: codecov/codecov-action@v5
+        with:
+          fail_ci_if_error: true
+          token: ${{ secrets.CODECOV_TOKEN }}
+          slug: world-federation-of-advertisers/cross-media-measurement
+          files: ${{ env.BAZEL_OUTPUT_PATH }}/_coverage/_coverage_report.dat
 
       - name: Create cluster
         id: create-cluster
