--- a/src/main/proto/wfa/measurement/edpaggregator/v1alpha/BUILD.bazel
+++ b/src/main/proto/wfa/measurement/edpaggregator/v1alpha/BUILD.bazel
@@ -24,10 +24,16 @@ kt_jvm_proto_library(
 proto_library(
     name = "results_fulfiller_config_proto",
     srcs = ["results_fulfiller_config.proto"],
-    strip_import_prefix = IMPORT_PREFIX,
+    strip_import_prefix = _IMPORT_PREFIX,
+    deps = [
+        "@com_google_googleapis//google/api:field_behavior_proto",
+        "@com_google_googleapis//google/api:resource_proto",
+    ],
 )
 
 kt_jvm_proto_library(
     name = "results_fulfiller_config_kt_jvm_proto",
-    deps = [":results_fulfiller_config_proto"],
+    deps = [
+        ":results_fulfiller_config_proto",
+    ],
 )
